@@ -29,6 +29,8 @@
 #include <kwqdebug.h>
 #include <loader.h>
 
+#include <WCURLHandle.h>
+
 // up to which size is a picture for sure cacheable
 #define MAXCACHEABLE 40*1024
 // default cache size
@@ -941,16 +943,35 @@ void DocLoader::removeCachedObject( CachedObject* o ) const
 
 - (void)WCURLHandle:(id)sender resourceDataDidBecomeAvailable:(NSData *)data offset:(int)offset length:(int)length userData:(void *)userData
 {
+    NSArray *byteBlocks;
     char *bytes;
+    int byteBlockCount;
+    id object;
+    id <WCByteBlock> byteBlock;
 
     if (!m_data) {
         m_data = [data retain];
     }
-    
-    bytes = ((char *)[data bytes]) + offset;    
-    
+
     KIO::Job *job = static_cast<KIO::Job *>(userData);
-    m_loader->slotData(job, (const char *)bytes, length);
+    
+    byteBlocks = nil;
+    if ([data respondsToSelector:@selector(byteBlocksForRange:)]) {
+        object = data;
+        byteBlocks = [object byteBlocksForRange:NSMakeRange(offset, length)];  
+    }
+    if (byteBlocks) {
+        byteBlockCount = [byteBlocks count];
+        for (int i = 0; i < byteBlockCount; i++) {
+            byteBlock = [byteBlocks objectAtIndex:i];
+            m_loader->slotData(job, (const char *)[byteBlock bytes], [byteBlock byteLength]);
+        }
+    }
+    else {
+        bytes = ((char *)[data bytes]) + offset;    
+        m_loader->slotData(job, (const char *)bytes, length);
+    }
+    
 }
 
 - (void)WCURLHandle:(id)sender resourceDidFailLoadingWithResult:(int)result userData:(void *)userData
